tests/NormalTests/paczka1/fuzzy1/85681289.err
Error in line 1: hZ8fmD9HJV S597 8,69
Error in line 3: kqs0Gp3b S47 13,7
Error in line 4: kqs0Gp3b S597 20,1
Error in line 5: hZ8fmD9HJV S597 30,7
Error in line 14: rDYlWT S47 TT3,2
Error in line 10: Wl2AnDjj3S S993 51,8
Error in line 15: S597 S392 16,2
Error in line 20: KxYhJzKJDV S392 99,3
Error in line 21: KxYhJzKJDV S993 16,5
Error in line 19: S597 S993 31,9
Error in line 22: KxYhJzKJDV S47 35,8
Error in line 30: Wl2AnDjj3S S392 55,3
